fix(store): Cart item's title should not overflow

--- a/store/src/app/pages/cart/cart.component.scss
+++ b/store/src/app/pages/cart/cart.component.scss
@@ -10,3 +10,7 @@ nz-input-number {
 .summary-row {
   margin: 10px 0;
 }
+
+.cart-item-title {
+  overflow: hidden;
+}
