--- a/store/src/app/pages/check-out/check-out.component.scss
+++ b/store/src/app/pages/check-out/check-out.component.scss
@@ -8,6 +8,7 @@ label {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .cart-item {
@@ -16,6 +17,7 @@ label {
 
 .cart-item-title {
   flex: 3;
+  overflow: hidden;
 }
 
 .cart-item-price {
